### configure.ac -- Autoconf

# Author: Michael Grünewald
# Date: Thu Nov  7 07:27:36 CET 2013

# Gasoline (https://github.com/michipili/gasoline)
# This file is part of Gasoline
#
# Copyright © 2013 Michael Grünewald
#
# This file must be used under the terms of the CeCILL-B.
# This source file is licensed as described in the file COPYING, which
# you should have received as part of this distribution. The terms
# are also available at
# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt

AC_INIT(meta/gasoline.in)
AC_SUBST([version], [0.0])
AC_OUTPUT(Makefile.inc)
AC_OUTPUT(meta/gasoline)

### End of file `configure.ac'
